// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tabs color property 1`] = `
<div class="wv-tabs wv-tabs--line">
  <div class="wv-tabs__wrap wv-hairline--top-bottom">
    <div class="wv-tabs__nav wv-tabs__nav--line" style="border-color: red;">
      <div class="wv-tabs__line" style="background-color: red; width: 0px; transform: translateX(0px); transition-duration: 0.2s;"></div>
      <div class="wv-tab wv-tab--active"><span class="wv-ellipsis"></span></div>
      <div class="wv-tab"><span class="wv-ellipsis"></span></div>
      <div class="wv-tab"><span class="wv-ellipsis"></span></div>
    </div>
  </div>
  <div class="wv-tabs__content">
    <div class="wv-tab__pane"></div>
    <div class="wv-tab__pane" style="display: none;"></div>
    <div class="wv-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`tabs create with tab items 1`] = `
<div class="wv-tabs wv-tabs--line">
  <div class="wv-tabs__wrap wv-hairline--top-bottom">
    <div class="wv-tabs__nav wv-tabs__nav--line">
      <div class="wv-tabs__line"></div>
      <div class="wv-tab wv-tab--active"><span class="wv-ellipsis"></span></div>
      <div class="wv-tab"><span class="wv-ellipsis"></span></div>
      <div class="wv-tab"><span class="wv-ellipsis"></span></div>
    </div>
  </div>
  <div class="wv-tabs__content">
    <div class="wv-tab__pane"></div>
    <div class="wv-tab__pane" style="display: none;"></div>
    <div class="wv-tab__pane" style="display: none;"></div>
  </div>
</div>
`;

exports[`tabs lineHeight property 1`] = `
<div class="wv-tabs wv-tabs--line">
  <div class="wv-tabs__wrap wv-hairline--top-bottom">
    <div class="wv-tabs__nav wv-tabs__nav--line">
      <div class="wv-tabs__line" style="width: 0px; transform: translateX(0px); transition-duration: 0.2s; height: 10px; border-radius: 10px;"></div>
      <div class="wv-tab wv-tab--active"><span class="wv-ellipsis"></span></div>
      <div class="wv-tab"><span class="wv-ellipsis"></span></div>
      <div class="wv-tab"><span class="wv-ellipsis"></span></div>
    </div>
  </div>
  <div class="wv-tabs__content">
    <div class="wv-tab__pane"></div>
    <div class="wv-tab__pane" style="display: none;"></div>
    <div class="wv-tab__pane" style="display: none;"></div>
  </div>
</div>
`;
